2006-01-04  Marco Barisione <barisione@gmail.com>

	* gtksourceview/gtksourceprintjob.c, tests/test-widget.c: added casts
	to avoid warnings on different signedness.
	Partially fixes bug #309663 – gcc 4.01 compiler treats pointer target
	warnings as errors

=== gtksourceview 1.5.4 ===

2006-01-04  Paolo Borelli  <pborelli@katamail.com>

	* configure.in:
	* README:
	* NEWS: release 1.5.2

2006-01-03  Paolo Maggi  <paolo@gnome.org>

	Fixes bug #170604 – Syntax for GNU Octave
	
	* gtksourceview/language-specs/Makefile.am: added octave.lang
	
	* gtksourceview/language-specs/octave.lang: new file by
	Søren Hauberg <soren@hauberg.org> and 
	Muthiah Annamalai <gnumuthu@users.sf.net>

=== gtksourceview 1.5.3 ===

2006-01-02  Paolo Maggi  <paolo@gnome.org>

	* configure.in:
	* README:
	* NEWS: release 1.5.3

2006-01-02  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourcelanguage.c: avoid some strdups when parsing
	mime types.

2005-12-31  Paolo Maggi  <paolo@gnome.org>

	* gtksourceview/language-specs/Makefile.am: added changelog.lang

	* gtksourceview/language-specs/changelog.lang: new file based on patches
	by  Jacob Ilsø Christensen <jacobilsoe@gmail.com> and Paolo Borelli
	<pborelli@katamail.com>

2005-12-31  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/*.c: restore gtksourceview-i18n.[ch] since we need
	our hack to do gettext initialization.

2005-12-31  Paolo Borelli  <pborelli@katamail.com>

	* configure.in: add a --disable-gnomeprint option for people who want
	to use sourceview in their application without the libgnomeprint dep,
	for instance on win32. However this option should only be used if you
	know what you are doing and not be used when building GNOME.

2005-12-31  Paolo Maggi  <paolo@gnome.org>

	* gtksourceview/language-specs/fortran.lang: does not mark "^COMMON" as
	a comment. Based on a patch by John Spray <jcs116@york.ac.uk>. 
	Fixes bug #168090 (Recognise fortran line comments better)
