@@ -1,3 +1,9 @@
+2006-01-06  Marco Barisione  <barisione@gmail.com>
+
+	* tests/test-widget.c: added tests to detect memory allocated by
+	xmlMalloc() but not freed by xmlFree() or freed by xmlFree() but not
+	allocated by xmlMalloc()
+
 2006-01-04  Marco Barisione <barisione@gmail.com>
 
 	* gtksourceview/gtksourceprintjob.c, tests/test-widget.c: added casts
